# DSF

./: .gitignore  LICENSE  README.md
.github/workflows/: deploy.yml
benchmarks/: RESULTS.md
doc/: comparison.md  edge-cases.md  error-codes.md  migration-guide.md  spec.md
ref-impl/go/: benchmark.go  go.mod
ref-impl/go/cmd/conformance/: main.go
ref-impl/go/dsf/: dsf.go  dsf_test.go
ref-impl/go/dtxt/: dsf_test.go  dtxt.go
ref-impl/python/: benchmark.py  dsf.py  dtxt.py  run_conformance.py
ref-impl/python/tests/: test_dsf.py
ref-impl/rs/: Cargo.toml
ref-impl/rs/src/: lib.rs  main.rs  run_conformance.rs
ref-impl/ts/: benchmark.ts  dsf.ts  dtxt.ts  package-lock.json  package.json  repro_format.ts  run_conformance.ts  test_dsf.ts  test_dtxt.ts  tsconfig.json
scripts/: check_conformance.sh
tests/conformance/: tests.json
web/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
web/src/: declarations.d.ts  main.ts  style.css
