[package]
name = "dtxt"
version = "0.1.0"
edition = "2021"

[lib]
name = "dtxt_rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "run_conformance"
path = "src/run_conformance.rs"

[[bin]]
name = "benchmark"
path = "src/main.rs"

[dependencies]
rand = "0.8"
ryu = "1.0"
memchr = "2.7"
rustc-hash = "2.1"
pyo3 = { version = "0.23", features = ["extension-module"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
num-bigint = "0.4.6"
hex = "0.4.3"
num-traits = "0.2.19"

[profile.dev]
opt-level = 2
